syntax = "proto3";
package protos;
option go_package = "github.com/JDJFisher/distributed-storage/protos";
import "protos/common.proto";

message ReadRequest {
  string key = 1;
}

message WriteRequest {
  string key = 1;
  string value = 2;
  string uuid = 3;
}

message ProcessedRequest {
  string uuid = 1;
}

message ReadResponse {
  string value = 1;
}

message RequestData {
}

message RequestDataResponse {
  string key = 1;
  string value = 2;
}

service Storage {
    rpc read(ReadRequest) returns (ReadResponse);
    rpc write(WriteRequest) returns (OkResponse);
    rpc processed(ProcessedRequest) returns (OkResponse);
    rpc persist(ProcessedRequest) returns (OkResponse);

    rpc GetTailData(RequestData) returns (stream RequestDataResponse) {};
}

